tests/ui/explicit-tail-calls/infinite-recursion-in-ctfe.stderr
error: constant evaluation is taking a long time
  --> $DIR/infinite-recursion-in-ctfe.rs:7:5
   |
LL |     become f();
   |     ^^^^^^^^^^
   |
   = note: this lint makes sure the compiler doesn't get stuck due to infinite loops in const eval.
           If your compilation actually takes a long time, you can safely allow the lint.
help: the constant being evaluated
  --> $DIR/infinite-recursion-in-ctfe.rs:4:1
   |
LL | const _: () = f();
   | ^^^^^^^^^^^
   = note: `#[deny(long_running_const_eval)]` on by default

error: aborting due to 1 previous error

